Add a hover effect for the selection toggle.

FIXED-IN: 4.13.0
REVIEW: 116028
BUG: 299328